fixed whitespace and console.logs

--- a/src/main.css
+++ b/src/main.css
@@ -7,8 +7,8 @@ body {
     background: #1C6EA4;
     background: -moz-linear-gradient(left, #1C6EA4 0%, #00F1FF 50%, #144E75 100%);
     background: -webkit-linear-gradient(left, #1C6EA4 0%, #00F1FF 50%, #144E75 100%);
-    background: linear-gradient(to right, #1C6EA4 0%, #00F1FF 50%, #144E75 100%);}
-    
+    background: linear-gradient(to right, #1C6EA4 0%, #00F1FF 50%, #144E75 100%);
+}
 button {
     color: rgb(21, 227, 255); 
     font-size: 30px; 
@@ -26,7 +26,6 @@ button {
     border: 2px solid rgb(28, 110, 164); 
     display: inline-block;
 }
-   
 ul, ol {
     margin-left: 25%;
     margin-right: 25%;
